fix font and spacing

--- a/src/common/menus/Items/Transactions/Card/CardMinimize/styles.module.scss
+++ b/src/common/menus/Items/Transactions/Card/CardMinimize/styles.module.scss
@@ -14,7 +14,7 @@
 
 .game-name {
     font-size: 1.2rem;
-    font-weight: 400;
+    font-weight: 500;
     letter-spacing: 0.026rem;
 }
 
