--- a/src/common/menus/MenuTabs/TabItem/styles.module.scss
+++ b/src/common/menus/MenuTabs/TabItem/styles.module.scss
@@ -18,6 +18,6 @@
 
 .item-text {
     font-size: 1.2rem;
-    font-weight: 300;
+    font-weight: 400;
     text-transform: capitalize;
 }
