--- a/src/styles/base/_utilities.scss
+++ b/src/styles/base/_utilities.scss
@@ -25,3 +25,15 @@
 .text-minus {
     color: #ff2667;
 }
+
+.text-nowrap {
+    white-space: nowrap;
+}
+
+.text-uppercase {
+    text-transform: uppercase;
+}
+
+.text-capitalize {
+    text-transform: capitalize;
+}
